/*
  Customer Offer

  This service domain orchestrates the processing of a product offer for a new or established &nbsp;customer. The offer process is defined specifically for the product or service being considered and can include actions such as document checks, collateral allocation, credit assessments, underwriting decisions, regulatory and procedural checks, eligibility checks, the use of internal and external specialist services (such as evaluations and legal advice).

  The version of the OpenAPI document: 10.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.redhat.mercury.customeroffer.v10;

import public "google/protobuf/any.proto";

message CustomerOfferProcedure {

  google.protobuf.Any CustomerReference = 48175344;

  google.protobuf.Any PartyReference = 256576734;

  string ProductandServiceType = 10082362;

  string CustomerOfferProcessingSchedule = 499527784;

  string CustomerOfferProcessingTask = 77110316;

  string CustomerOfferProcessingTaskType = 250448945;

  google.protobuf.Any EmployeeOrBusinessUnitReference = 259644043;

  string CustomerOfferProcessingTaskWorkProducts = 70253944;

  string CustomerOfferProcessingTaskResult = 87646100;

}
